--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   ],
   "author": "forclan (http://github.com/forclan)",
   "license": "MIT",
-  "bugs": {
-  },
+  "bugs": {},
   "homepage": "https://github.com/forclan/react-redux-slider",
   "devDependencies": {
     "babel-core": "^6.0.20",
@@ -33,11 +32,13 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
