--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.2",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
