--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "node-sass": "^3.7.0",
+    "react-addons": "^0.9.1-deprecated",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
