--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^3.6.2",
     "node-sass": "^3.7.0",
     "react-addons": "^0.9.1-deprecated",
+    "react-addons-css-transition-group": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
@@ -46,7 +47,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react": "^0.14.8",
+    "react-dom": "^15.0.2"
   }
 }
