--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "slider use react and redux",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "main": "./lib/index.js",
   "repository": {
