--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux-slider",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "slider use react and redux",
   "scripts": {
     "start": "node server.js",
@@ -8,7 +8,7 @@
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
-  "main": "./lib/index.js",
+  "main": "./lib/Slider.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/forclan/react-redux-slider"
